objects/APTS_Stage_Data_Validation_Rules_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>APTS_ApprovalMatrix_Reconciliation__c</fullName>
        <label>ApprovalMatrix Reconciliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ApprovalMatrix_Validation__c</fullName>
        <label>ApprovalMatrix Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Attachment_Error__c</fullName>
        <description>Error report of Attachment</description>
        <label>Attachment Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Attachment_Validation__c</fullName>
        <description>Link of Validation Report of Attachment</description>
        <label>Attachment Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Automated_Loop_Reschedule__c</fullName>
        <description>It determines that how many number of times system should re-schedule the same job.</description>
        <label>Automated Loop Reschedule</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Category_Label__c</fullName>
        <label>Category Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Category_Name__c</fullName>
        <label>Category Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Category_Sequence__c</fullName>
        <description>Determines the sequence of Category</description>
        <inlineHelpText>Values should be Semicolon Seperated</inlineHelpText>
        <label>Category Sequence</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Country_Code__c</fullName>
        <label>Country Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <description>Country for Data Migration</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Create_Audit_Fields__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Custom setting to determine whether to populate the audit fields.</description>
        <label>create Audit Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Currency__c</fullName>
        <description>Currency for Data Migration</description>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Division__c</fullName>
        <label>Division</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_GlobalProductReport__c</fullName>
        <label>Global Product Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_GlobalProduct_Reconciliation__c</fullName>
        <label>GlobalProduct Reconciliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_GlobalProduct_Validation__c</fullName>
        <label>GlobalProduct Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LocalHierachy_Reconciliation__c</fullName>
        <label>LocalHierachy Reconciliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LocalHierachy_Validation__c</fullName>
        <label>LocalHierachy Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LocalOperationalData_Reconciliation__c</fullName>
        <label>LocalOperationalData Reconciliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LocalOperationalData_Validation__c</fullName>
        <label>LocalOperationalData Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LocalProductReport__c</fullName>
        <label>Local Product Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LocalProduct_Reconciliation__c</fullName>
        <label>LocalProduct Reconciliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LocalProduct_Validation__c</fullName>
        <label>LocalProduct Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Hierachy_Report__c</fullName>
        <label>Local Hierachy Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Locale__c</fullName>
        <description>Locale for Data Migration</description>
        <label>Locale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MSPAApproval_Reconciliation__c</fullName>
        <label>MSPAApproval Reconciliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MSPAApproval_Validation__c</fullName>
        <label>MSPAApproval Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MSPA_Hierarchy_Level__c</fullName>
        <label>MSPA Hierarchy Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MSPA_LineItems_Reconciliation__c</fullName>
        <label>MSPA LineItems Reconciliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MSPA_LineItems_Validation__c</fullName>
        <label>MSPA LineItems Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MSPA_Reconciliation__c</fullName>
        <label>MSPA Reconciliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MSPA_Validation__c</fullName>
        <label>MSPA Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MasterPickList_Reconciliation__c</fullName>
        <label>MasterPickList Reconciliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MasterPickList_Validation__c</fullName>
        <label>MasterPickList Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Notes_Error__c</fullName>
        <description>Link of the Error Report of Notes</description>
        <label>Notes Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Notes_Validation__c</fullName>
        <description>Link of the Validation Report of Notes</description>
        <label>Notes Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ProductLineTreeReport__c</fullName>
        <label>ProductLineTree Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ProductLineTree_Reconciliation__c</fullName>
        <label>ProductLineTree Reconciliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ProductLineTree_Validation__c</fullName>
        <label>ProductLineTree Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Line_Tree_BUs__c</fullName>
        <defaultValue>&quot;LPBS;LPCP;LPCW;LPED;LPLS;LPSU;LPWA;EPBP;EPBS;EPCP;EPCW;EPLS;EPMV;EPSU&quot;</defaultValue>
        <inlineHelpText>Semicolon delimited list of approved BU Codes.</inlineHelpText>
        <label>APTS Product Line Tree BUs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation_Error__c</fullName>
        <description>Error Report for Quotation</description>
        <label>Quotation Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation_Line_Item_Error__c</fullName>
        <description>Error Report for Quotation Line Item</description>
        <label>Quotation Line Item Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation_Line_Item_Reconciliation__c</fullName>
        <description>Reconciliation Report for Quotation Line Item</description>
        <label>Quotation Line Item Reconciliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation_Line_Item_Validation__c</fullName>
        <description>Validation Report for Quotation Line Item</description>
        <label>Quotation Line Item Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation_Reconciliation__c</fullName>
        <description>Reconciliation Report for Quotation</description>
        <label>Quotation Reconciliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation_Validation__c</fullName>
        <description>Validation Report for Quotation</description>
        <label>Quotation Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SProductLineTree_BUName__c</fullName>
        <description>Contains values seperated by comma to validate values in BU name field of Staging Product Line Tree Object</description>
        <label>APTS SProduct Line Tree BUName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Organization__c</fullName>
        <description>Sales Organization for Different Countries</description>
        <inlineHelpText>Semicolon delimited list of Sales Organization.</inlineHelpText>
        <label>Sales Organization</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Stage_Local_Operational_Data__c</fullName>
        <label>Local Operational Data Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Stage_MSPA_Approval__c</fullName>
        <label>MSPA Approval Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Stage_MSPA_LineItems__c</fullName>
        <label>MSPA LineItems Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Stage_MSPA__c</fullName>
        <label>MSPA Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Staging_Approval_Matrix__c</fullName>
        <label>Approval Matrix Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Staging_Master_Pick_List__c</fullName>
        <label>Master Pick List Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_System_Id__c</fullName>
        <description>System Id which will be used to prepare External Id for Local Products</description>
        <inlineHelpText>Specify System Id to be used to prepare External Id for Local Products</inlineHelpText>
        <label>System Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Validate_SFDC_User__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag to check if Assigned Approver and Actual Approver fields required validation against SFDC User Object</description>
        <label>Validate SFDC User</label>
        <type>Checkbox</type>
    </fields>
    <label>APTS Stage Data Validation Rules</label>
</CustomObject>